--- a/src/components/home/explainer/home-explainer.css
+++ b/src/components/home/explainer/home-explainer.css
@@ -115,16 +115,14 @@
 				/* Appearance */
 			}
 
-			@media (hover: hover) {
-				&::before {
-					/* Layout */
-					inset: 0;
-					position: absolute;
-					z-index: 1;
+			&::before {
+				/* Layout */
+				inset: 0;
+				position: absolute;
+				z-index: 1;
 
-					/* Generated */
-					content: "";
-				}
+				/* Generated */
+				content: "";
 			}
 		}
 	}
